# cpp_ppo

./: .gitignore  BACKGROUND_AGENT_PROMPT.md  CMakeLists.txt  CMakeLists_full.txt  DENSE_LAYER_COMPLETION_SUMMARY.md  OPTIMIZED_TRAINING_SUMMARY.md  PERFORMANCE_MONITORING_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PPO_ARCHITECTURAL_SOLUTION_PLAN.md  PPO_Implementation_Guide.md  PPO_PHASE4_5_COMPLETION.md  PPO_PHASE4_PROGRESS.md  PROJECT_STATUS.md  README.md  VALUE_LOSS_DOMINANCE_ANALYSIS.md  VISUALIZATION_FEATURES.md  output.txt  viz_output.txt
examples/: basic_ppo_training.cpp  basic_training.cpp  fixed_ppo_training.cpp  hyperparameter_tuning.cpp  optimized_ppo_training.cpp  simple_hyperparameter_test.cpp  tuned_ppo_training.cpp  visualization_demo.cpp
include/environment/: scalable_cartpole.hpp
include/neural_network/: activation_functions.hpp  dense_layer.hpp  matrix.hpp  neural_network.hpp
include/ppo/: policy_network.hpp  ppo_agent.hpp  ppo_buffer.hpp  value_network.hpp
include/utils/: learning_rate_scheduler.hpp  memory_pool.hpp  ppo_debugger.hpp  statistics.hpp  training_monitor.hpp
src/environment/: scalable_cartpole.cpp
src/neural_network/: activation_functions.cpp  dense_layer.cpp  matrix.cpp  neural_network.cpp
src/ppo/: policy_network.cpp  ppo_agent.cpp  ppo_buffer.cpp  value_network.cpp
src/utils/: ppo_debugger.cpp  training_monitor.cpp
tests/environment/: test_cartpole.cpp
tests/neural_network/: test_activation_functions.cpp  test_dense_layer.cpp  test_matrix.cpp  test_neural_network.cpp
tests/ppo/: test_gradient_computation.cpp  test_policy_network.cpp  test_ppo_agent.cpp  test_ppo_buffer.cpp  test_value_function_stability.cpp  test_value_network.cpp
tests/utils/: test_training_monitor.cpp
